Version 5.5.0   unreleased

    * Fix isEnabled() and setEnabled() on the UTCTimeBox and UTCDateBox widgets.
    * Add new method AbstractWidgetUtils.setFocusAfterDisplay(Focusable)
    * Add setFocus() methods on AbstractWidgetUtils as aliases for setFocusOnDiplay().

Version 5.4.0   25 Sep 2015

    * Add ModuleNestedTabPanelView, which is both a tab and a tab panel
    * Tweak tab initialization so tabs are only marked as initialized if a handler is invoked.
    * Various refactorings in com.cedarsolutions.client.gwt.module.view:
      - Refactor out ModuleTabUtils, TabPanelResizeHandler, and TabSelectionHandler
      - Deprecate ModuleTabPanelView.TabPanelResizeHandler
      - Deprecate ModuleTabView.SelectionHandler

Version 5.3.0   15 Sep 2015

    * Deprecate NativeUtils.openUrl(), which doesn't work properly in IE 9.
    * Reimplement AbstractWidgetUtils.openUrl() using Window.Location.assign().

Version 5.2.7   02 Sep 2015

    * Implement Jacoco coverage reports in build.gradle.
    * Implement Checkstyle reports in build.gradle.
    * Implement JavaNCSS metrics in build.gradle.
    * Exclude duplicates from generated jar files.
    * Bump up to CedarBuild v0.9.5, to get Javadoc fixes.
    * Bump up to AppEngine v1.9.25, to stay up-to-date.

Version 5.2.6   17 Jul 2015

    * Bump up to CedarBuild v0.9.3, just to stay up-to-date.
    * Fix Eclipse 4.5 resource leak warning for streams in FilesystemUtils.copyFile().
    * Fix Eclipse 4.5 resource leak warning for Scanner in StringUtils.convertStreamToString().

Version 5.2.5   13 Jul 2015

    * Bump up to AppEngine v1.9.23 just to stay up-to-date.
    * Convert to Gradle 2 by upgrading to CedarBuild v0.9.1 (tested with Gradle v2.5).

Version 5.2.4   14 Jun 2015

    * Bump up to CedarBuild v0.8.17, just to stay up-to-date.
    * Configure Mercurial line endings in .hgeol and auto-convert files as necessary.

Version 5.2.3   22 Apr 2015
